<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetterActivity">

    <Button
        android:id="@+id/editButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="199dp"
        android:layout_height="80dp"
        android:layout_marginBottom="4dp"
        android:text="@string/edit"
        app:layout_constraintBottom_toBottomOf="@+id/Buttons"
        app:layout_constraintEnd_toEndOf="@+id/Buttons" />

    <Button
        android:id="@+id/setButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="199dp"
        android:layout_height="80dp"
        android:layout_marginBottom="4dp"
        android:text="@string/schedule"
        app:layout_constraintBottom_toBottomOf="@+id/Buttons"
        app:layout_constraintStart_toStartOf="@+id/Buttons" />

    <View
        android:id="@+id/infoView"
        android:layout_width="0dp"
        android:layout_height="78dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="1dp"
        android:background="#CCCBCB"
        app:layout_constraintBottom_toTopOf="@+id/update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/changeAction"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:text="@string/change_action"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/update"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginBottom="392dp"
        android:background="#07538B"
        app:layout_constraintBottom_toTopOf="@+id/changeAction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/dateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/update"
        app:layout_constraintEnd_toEndOf="@+id/update"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="@+id/update"
        app:layout_constraintTop_toTopOf="@+id/update"
        app:layout_constraintVertical_bias="0.437"
        tools:text="Set Date and Time" />

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="You're about to schedule a &quot;Do not disturb action&quot; \n               See details below or click to edit"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/update"
        app:layout_constraintEnd_toEndOf="@+id/infoView"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="@+id/infoView"
        app:layout_constraintTop_toTopOf="@+id/infoView"
        app:layout_constraintVertical_bias="0.645" />

    <View
        android:id="@+id/Buttons"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="112dp"
        app:layout_constraintBottom_toTopOf="@+id/changeAction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update"
        app:layout_constraintVertical_bias="1.0" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:background="#CCCBCB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update" />

    <CheckBox
        android:id="@+id/checkBox"
        style="@android:style/Widget.Material.Light.CompoundButton.CheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="Repeat"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.555" />

</android.support.constraint.ConstraintLayout>